[package]
name = "sexxi-webhook"
version = "0.1.0"
authors = ["Archer Zhang <archer.xn@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.12"
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
nix = "0.17"
lazy_static = "1.4"
futures = "0.3"